[gd_scene load_steps=7 format=2]

[ext_resource path="res://Table.gd" type="Script" id=1]
[ext_resource path="res://Textures/back2.png" type="Texture" id=2]
[ext_resource path="res://Textures/objects.png" type="Texture" id=3]
[ext_resource path="res://Textures/back3.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 110.875, 104.421 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34.4769, 96.0088 )

[node name="Table" type="StaticBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.347299, 0.515235 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 29
collision_mask = 29

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 128.758, -2.22308 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -57.0542, -51.0834 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )
vframes = 3
hframes = 5

[node name="TextureProgress" type="TextureProgress" parent="Sprite2"]
margin_left = -51.0022
margin_top = -57.7223
margin_right = 588.998
margin_bottom = 342.278
rect_scale = Vector2( 0.14, 0.05 )
texture_progress = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 53.7371, -49.0931 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )
vframes = 3
hframes = 5

[node name="TextureProgress" type="TextureProgress" parent="Sprite3"]
margin_left = -53.7217
margin_top = -59.7258
margin_right = 586.278
margin_bottom = 340.274
rect_scale = Vector2( 0.14, 0.05 )
texture_progress = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( -55.0639, 54.4005 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )
vframes = 3
hframes = 5

[node name="TextureProgress" type="TextureProgress" parent="Sprite4"]
margin_left = -43.2522
margin_top = -63.1187
margin_right = 596.748
margin_bottom = 336.881
rect_scale = Vector2( 0.14, 0.05 )
texture_progress = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 54.4005, 52.4102 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )
vframes = 3
hframes = 5

[node name="TextureProgress" type="TextureProgress" parent="Sprite5"]
margin_left = -48.1041
margin_top = -61.7656
margin_right = 591.896
margin_bottom = 338.234
rect_scale = Vector2( 0.14, 0.05 )
texture_progress = ExtResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
